--- a/sefubrenda.com/public_html/TheWedding/wedding.html
+++ b/sefubrenda.com/public_html/TheWedding/wedding.html
@@ -10,17 +10,24 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/wedding.css" />
+    <!-- google fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Roboto+Slab:wght@500&family=Sacramento&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/wedding.css" />
   </head>
   <body>
+    <!-- Title -->
+    <div class="title-container">
+      <p>Sefufim Alvarez</p>
+      <p>&</p>
+      <p>Brenda Rivera</p>
+    </div>
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg ">
       <div class="container-fluid">
         <button
           class="navbar-toggler"
@@ -59,7 +66,177 @@
     </nav>
 
     <div class="top"></div>
-
+    <!-- Groom and bride intro -->
+    <div class="container mt-5">
+      <p class="text-center mb-5">
+        <span class="the">THE</span>
+        <span class="following_word">Love Birds</span>
+      </p>
+      <div class="row ">
+        <div class="col-md-6">
+          <div class="custom-card mb-4 mt-5">
+            <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 1">
+            <div class="card-body">
+              <p class="card-text" id="card-1">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="custom-card mb-4 mt-5">
+            <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 2">
+            <div class="card-body">
+              <p class="card-text" id="card-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Parents -->
+    <div class="container mt-5">
+      <p class="text-center mb-5">
+        <span class="the">THE</span>
+        <span class="following_word">Parents</span>
+      </p>
+      <div class="row ">
+        <div class="col-md-3">
+          <div class="custom-card mb-4 mt-5">
+            <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 1">
+            <div class="card-body">
+              <p class="card-text" id="card-1">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="custom-card mb-4 mt-5">
+            <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 2">
+            <div class="card-body">
+              <p class="card-text" id="card-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="custom-card mb-4 mt-5">
+            <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 1">
+            <div class="card-body">
+              <p class="card-text" id="card-1">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="custom-card mb-4 mt-5">
+            <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 2">
+            <div class="card-body">
+              <p class="card-text" id="card-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+<!-- the crew -->
+<div class="container mt-5">
+  <p class="text-center mb-5">
+    <span class="the">THE</span>
+    <span class="following_word">Crew</span>
+  </p>
+  <div class="row ">
+    <div class="col-md-4">
+      <div class="custom-card mb-4 mt-5">
+        <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 1">
+        <div class="card-body">
+          <p class="card-text" id="card-1">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="custom-card mb-4 mt-5">
+        <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 2">
+        <div class="card-body">
+          <p class="card-text" id="card-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="custom-card mb-4 mt-5">
+        <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 2">
+        <div class="card-body">
+          <p class="card-text" id="card-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="custom-card mb-4 mt-5">
+        <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 1">
+        <div class="card-body">
+          <p class="card-text" id="card-1">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="custom-card mb-4 mt-5">
+        <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 2">
+        <div class="card-body">
+          <p class="card-text" id="card-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="custom-card mb-4 mt-5">
+        <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 2">
+        <div class="card-body">
+          <p class="card-text" id="card-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="custom-card mb-4 mt-5">
+        <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 1">
+        <div class="card-body">
+          <p class="card-text" id="card-1">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="custom-card mb-4 mt-5">
+        <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 2">
+        <div class="card-body">
+          <p class="card-text" id="card-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="custom-card mb-4 mt-5">
+        <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 2">
+        <div class="card-body">
+          <p class="card-text" id="card-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="custom-card mb-4 mt-5">
+        <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 1">
+        <div class="card-body">
+          <p class="card-text" id="card-1">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="custom-card mb-4 mt-5">
+        <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 2">
+        <div class="card-body">
+          <p class="card-text" id="card-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="custom-card mb-4 mt-5">
+        <img src="https://placehold.co/10x10" class="card-img-top" alt="Card 2">
+        <div class="card-body">
+          <p class="card-text" id="card-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
     <!-- footer  -->
 
     <footer class="bg-dark text-light text-center py-3">
